--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Ranks</a>
+                        <a class="nav-link" href="rank.html">Ranks</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
