--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- CSS Stylesheet -->
-
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <!-- Fonts -->
+
+
         <title>07ScapeClub</title>
     </head>
 
